fix(rendeing): now wrap poem lines into a span to ensure the numbering on the right isn't too far off the text.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1024,6 +1024,10 @@ $render-sic: false;
     display: inline-block;
   }
 
+  .list-tei-l {
+    display: inline-block;
+  }
+
   .tei-l {
     // so each verse is on its own line
     display: block;
